--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,7 @@ Author:
     person(given = "Jayamini",
            family = "Liyanage",
            role = c("aut", "cre"),
-           email = "j.liyanage@latrobe.edu.au")
+           email = "j.liyanage@latrobe.edu.au",
            comment = c(ORCID = "0009-0004-8276-8191"))
     person(given = "Alysha",
            family = "De Livera",
