--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,9 +7,10 @@ Authors@R: c(
   person("Alysha","De Livera",role="aut",email="a.delivera@latrobe.edu.au"))
 Maintainer: Jayamini Liyanage <j.liyanage@latrobe.edu.au>
 Author: Jayamini Liyanage [aut, cre], Alysha De Livera [aut]
-Description: Performs multivariate meta-analysis for high-dimensional metabolomics data for integrating and collectively analysing individual-level metabolomics data generated from multiple studies as well as for combining summary estimates. This approach accounts for correlation between metabolites, considers variability within and between studies, handles missing values and uses shrinkage estimation to allow for high dimensionality.
+Description: Performs multivariate meta-analysis for high-dimensional metabolomics data for integrating and collectively analysing individual-level metabolomics data generated from multiple studies as well as for combining summary estimates. This approach accounts for correlation between metabolites, considers variability within and between studies, handles missing values and uses shrinkage estimation to allow for high dimensionality. A detailed vignette with example datasets and code to prepare data and analyses are available on <https://bookdown.org/a2delivera/MetaHD/>.
 License: GPL-3
 Encoding: UTF-8
+Depends: R (>= 3.5.0)
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.1
