--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,20 +1,20 @@
 Package: MetaHD
 Type: Package
-Title: A Multivariate Meta-Analysis Model for Metabolomics Data
-Version: 0.1.2
+Title: A Multivariate Meta-Analysis Model for High-Dimensional Data
+Version: 0.1.3
 Authors@R: c(
   person("Jayamini","Liyanage",role=c("aut","cre"),email="j.liyanage@latrobe.edu.au"),
   person("Alysha","De Livera",role="aut",email="a.delivera@latrobe.edu.au"))
 Maintainer: Jayamini Liyanage <j.liyanage@latrobe.edu.au>
 Author: Jayamini Liyanage [aut, cre], Alysha De Livera [aut]
-Description: Performs multivariate meta-analysis for high-dimensional metabolomics data for integrating and collectively analysing individual-level metabolomics data generated from multiple studies as well as for combining summary estimates. This approach accounts for correlation between metabolites, considers variability within and between studies, handles missing values and uses shrinkage estimation to allow for high dimensionality. A detailed vignette with example datasets and code to prepare data and analyses are available on <https://bookdown.org/a2delivera/MetaHD/>.
+Description: Performs multivariate meta-analysis for high-dimensional biological data for integrating and collectively analysing individual-level data generated from multiple studies as well as for combining summary estimates. This approach accounts for correlation between outcomes, considers variability within and between studies, handles missing values and uses shrinkage estimation to allow for high dimensionality. A detailed vignette with example datasets and code to prepare data and analyses are available on <https://bookdown.org/a2delivera/MetaHD/>.
 License: GPL-3
 Encoding: UTF-8
 Depends: R (>= 3.5.0)
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
-Imports: dplyr, tidyr, metafor, corpcor, Matrix, matrixcalc, Rcpp (>= 1.0.0)
+Imports: dplyr, tidyr, metafor, corpcor, nloptr, Matrix, matrixcalc, Rcpp (>= 1.0.0)
 LinkingTo:
     Rcpp,
     RcppArmadillo
