--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,20 +1,21 @@
 Package: MetaHD
 Type: Package
-Title: A Multivariate Meta-Analysis Model for High-Dimensional Metabolomics Data
-Version: 0.1.3
+Title: A Multivariate Meta-Analysis Model for High-Dimensional Data
+Version: 0.1.4
 Authors@R: c(
   person("Jayamini","Liyanage",role=c("aut","cre"),email="j.liyanage@latrobe.edu.au"),
-  person("Alysha","De Livera",role="aut",email="a.delivera@latrobe.edu.au"))
+  person("Alysha","De Livera",role="aut",email="a.delivera@latrobe.edu.au"),
+	person("Luke","Prendergast",role="aut",email="luke.prendergast@latrobe.edu.au"))
 Maintainer: Jayamini Liyanage <j.liyanage@latrobe.edu.au>
-Author: Jayamini Liyanage [aut, cre], Alysha De Livera [aut]
-Description: Performs multivariate meta-analysis for high-dimensional metabolomics data for integrating and collectively analysing individual-level data generated from multiple studies as well as for combining summary estimates. This approach accounts for correlation between outcomes, considers variability within and between studies, handles missing values and uses shrinkage estimation to allow for high dimensionality. A detailed vignette with example datasets and code to prepare data and analyses are available on <https://bookdown.org/a2delivera/MetaHD/>.
+Author: Jayamini Liyanage [aut, cre], Alysha De Livera [aut], Luke Prendergast [aut] 
+Description: Performs multivariate meta-analysis for high-dimensional data to integrate and collectively analyse individual-level data from multiple studies, as well as to combine summary estimates. This approach accounts for correlation between outcomes, incorporates within‑ and between‑study variability, handles missing values, and uses shrinkage estimation to accommodate high dimensionality. The MetaHD R package provides access to our fastMetaHD approach, along with a comprehensive suite of existing meta-analysis methods, including fixed-effects and random-effects models, Fisher’s method, Stouffer’s method, the weighted Z method, Lancaster’s method, the weighted Fisher’s method, and vote-counting approach. A detailed vignette with example datasets and code for data preparation and analysis is available at <https://alyshadelivera.github.io/MetaHD_vignette/>.
 License: GPL-3
 Encoding: UTF-8
 Depends: R (>= 3.5.0)
 LazyData: true
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.3.2
-Imports: dplyr, tidyr, metafor, corpcor, nloptr, Matrix, matrixcalc, Rcpp (>= 1.0.0)
+RoxygenNote: 7.3.3
+Imports: dplyr, tidyr, metafor, corpcor, nloptr, Matrix, matrixcalc, Rcpp (>= 1.0.0), dynamicTreeCut, future.apply, metapro, metap
 LinkingTo:
     Rcpp,
     RcppArmadillo
